message EmailMessage
{
    extensions 100 to max;

    enum Type
    {
        TaskScoreEmail = 1;
        UserTaskClaim = 2;
        OrgMembershipAccepted = 3;
        OrgMembershipRefused = 4;
        PasswordReset = 5;
        TaskArchived = 6;
        TaskClaimed = 7;
        TaskTranslationUploaded = 8;
    }

    required Type email_type = 1;
}
